this will fix a bug where the value form has too much height on the offers section

--- a/src/App.css
+++ b/src/App.css
@@ -385,6 +385,7 @@ input::-webkit-inner-spin-button {
 
   .car-grid {
     grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: 1fr;
   }
 
   .filter {
